[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "anchorpy>=0.21.0",
    "base58>=2.1.1",
    "borsh-construct>=0.1.0",
    "fastapi>=0.122.1",
    "httpx>=0.28.1",
    "pydantic>=2.12.5",
    "solana>=0.36.6",
    "solders>=0.26.0",
    "uvicorn[standard]>=0.38.0",
]
